build_log.txt

> vite_react_shadcn_ts@0.0.0 build
> vite build

[36mvite v5.4.19 [32mbuilding for production...[36m[39m
transforming...
node:internal/process/promises:394
    triggerUncaughtException(err, true /* fromPromise */);
    ^

[Failed to load PostCSS config: Failed to load PostCSS config (searchPath: C:/Users/LENOVO/Documents/Harestech/Afblock/afblock-app-frontend-dashboard): [Error] Loading PostCSS Plugin failed: Cannot find module 'caniuse-lite/data/features/css-hyphens'
Require stack:
- C:\Users\LENOVO\Documents\Harestech\Afblock\afblock-app-frontend-dashboard\node_modules\autoprefixer\data\prefixes.js
- C:\Users\LENOVO\Documents\Harestech\Afblock\afblock-app-frontend-dashboard\node_modules\autoprefixer\lib\autoprefixer.js
- C:\Users\LENOVO\Documents\Harestech\Afblock\afblock-app-frontend-dashboard\postcss.config.js

(@C:\Users\LENOVO\Documents\Harestech\Afblock\afblock-app-frontend-dashboard\postcss.config.js)
Error: Loading PostCSS Plugin failed: Cannot find module 'caniuse-lite/data/features/css-hyphens'
Require stack:
- C:\Users\LENOVO\Documents\Harestech\Afblock\afblock-app-frontend-dashboard\node_modules\autoprefixer\data\prefixes.js
- C:\Users\LENOVO\Documents\Harestech\Afblock\afblock-app-frontend-dashboard\node_modules\autoprefixer\lib\autoprefixer.js
- C:\Users\LENOVO\Documents\Harestech\Afblock\afblock-app-frontend-dashboard\postcss.config.js

(@C:\Users\LENOVO\Documents\Harestech\Afblock\afblock-app-frontend-dashboard\postcss.config.js)
    at load (file:///C:/Users/LENOVO/Documents/Harestech/Afblock/afblock-app-frontend-dashboard/node_modules/vite/dist/node/chunks/dep-C6uTJdX2.js:33632:11)
    at file:///C:/Users/LENOVO/Documents/Harestech/Afblock/afblock-app-frontend-dashboard/node_modules/vite/dist/node/chunks/dep-C6uTJdX2.js:33657:16
    at Array.map (<anonymous>)
    at plugins (file:///C:/Users/LENOVO/Documents/Harestech/Afblock/afblock-app-frontend-dashboard/node_modules/vite/dist/node/chunks/dep-C6uTJdX2.js:33656:8)
    at processResult (file:///C:/Users/LENOVO/Documents/Harestech/Afblock/afblock-app-frontend-dashboard/node_modules/vite/dist/node/chunks/dep-C6uTJdX2.js:33726:14)
    at file:///C:/Users/LENOVO/Documents/Harestech/Afblock/afblock-app-frontend-dashboard/node_modules/vite/dist/node/chunks/dep-C6uTJdX2.js:33856:14]

Node.js v24.11.1
